made some changes to image descriptions and added descriptions to the sections

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
     <figure alt="4 people at a table collaborationing on a project"></figure> <!-- Image located directly under header, link in css-->
     
-    <main> 
+    <main> <!-- The main body contains articles describing what changes will be implemented on your website-->
         <article id="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="plank board desk with laptop, notebook, coffee, and map pencils"/>
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="pinewood plank board desktop with laptop, spiral notepad, coffee mug, and map pencils"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -52,7 +52,7 @@
         </article>
     </main>
 
-    <aside>
+    <aside> <!-- This is a sidebar that will include sections about the results you should expect after changes have been implemented-->
         <section>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="gear funneling into money"/>
@@ -76,7 +76,7 @@
         </section>
     </aside>
 
-    <footer>
+    <footer> <!-- footer contains copywright info-->
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
