made a change to a comment on the aside section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </article>
     </main>
 
-    <aside> <!-- This is a sidebar that will include sections about the results you should expect after changes have been implemented-->
+    <aside> <!-- This is a sidebar that includes sections about the results you should expect after changes have been implemented-->
         <section>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="gear funneling into money"/>
