--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8" />
+    <title>Social Solution Services - Horiseon</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
-    <title>Horiseon</title>
 </head>
 
 <body>
